--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+
+"name": "iconsultaits",
+"version": "1.0",
   "dependencies": {
     "http-server": "^14.1.1"
-  }
+  },
+"scripts": {
+    "start": "node index.js"
+}
 }
